introduce `GameStorageService` to centralize game file and metadata management; refactor `AgentService`, controllers, and phase handlers to utilize new service; simplify storage base path handling and metadata operations